# ChangeLog for dev-db/mariadb-galera
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mariadb-galera/ChangeLog,v 1.3 2014/09/26 17:57:33 grknight Exp $

  26 Sep 2014;  <grknight@gentoo.org> metadata.xml:
  Add new USE descriptions for sst-*

*mariadb-galera-10.0.13 (03 Sep 2014)

  03 Sep 2014; Brian Evans <grknight@gentoo.org> +mariadb-galera-10.0.13.ebuild:
  Version bump, convert to multilib

*mariadb-galera-10.0.12 (30 Jul 2014)

  30 Jul 2014; Robin H. Johnson <robbat2@gentoo.org> +files/my.cnf-5.5,
  +mariadb-galera-10.0.12.ebuild, +metadata.xml:
  Bring MariaDB-Galera from the overlay into the tree. Thanks to the great work
  of Brian Evans <grknight@gentoo.org>.