@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/mariadb-galera
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mariadb-galera/ChangeLog,v 1.3 2014/09/26 17:57:33 grknight Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mariadb-galera/ChangeLog,v 1.4 2014/10/02 02:33:56 grknight Exp $
+
+  02 Oct 2014; Brian Evans <grknight@gentoo.org> mariadb-galera-10.0.12.ebuild,
+  mariadb-galera-10.0.13.ebuild:
+  Cleanup test data wrt bug 524158
 
   26 Sep 2014;  <grknight@gentoo.org> metadata.xml:
   Add new USE descriptions for sst-*
